<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_lenguage">Idioma</string>
    <string name="action_settings">Acerca de</string>
    <string name="app_centros">Centros de Investigación</string>
    <string name="app_facultades">Facultades</string>
    <string name="app_galeria">Galería</string>
    <string name="app_mapa">Mapa</string>
    <string name="app_menu_subtitle">Universidad Central \"Marta Abreu\" de las Villas</string>
    <string name="app_menu_subtitle_menu">Univ. Central de las Villas</string>
    <string name="app_menu_title">Visita Virtual</string>
    <string name="app_name">Visita Virtual a la UCLV</string>
    <string name="app_otros">Otros lugares</string>
    <string name="btn_cancelar">No</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_salir">Si</string>
    <string name="btn_text_salir">¿Desea cerrar la aplicaión?</string>
    <string name="btn_title">Confirmación</string>
    <string name="dialog_credit_departamento">Departamento de Tecnología Educativa</string>
    <string name="dialog_credit_realizadopor">Realizado por:</string>
    <string name="dialog_credit_title">INFORMACIÓN</string>
    <string name="dialog_idioma_espannol">Español</string>
    <string name="dialog_idioma_ingles">Inglés</string>
    <string name="dialog_idioma_title">Seleccionar Idioma</string>
    <string name="img_1">Valla situada a la entrada de la UCLV</string>
    <string name="img_10">Interior Sala Historia</string>
    <string name="img_11">Centro de Estudios de Dirección Empresarial</string>
    <string name="img_12">Comedor de Ciencias Agropecuarias</string>
    <string name="img_13">Hotel Los Sauces</string>
    <string name="img_14">Instituto de Biotecnología de las Plantas</string>
    <string name="img_15">Edificio de Becas en área de Ciencias Agropecuarias</string>
    <string name="img_16">Tabloncillo áreas deportivas</string>
    <string name="img_17">Piscinas</string>
    <string name="img_18">Vista aérea de las áreas deportivas</string>
    <string name="img_19">Acto de inaguración de los Juegos Criollos</string>
    <string name="img_2">Escultura de Marta Abreu</string>
    <string name="img_20">Encendido de la antorcha de los Juegos Criollos</string>
    <string name="img_21">Juegos Criollos</string>
    <string name="img_22">Juegos Criollos</string>
    <string name="img_23">Panadería</string>
    <string name="img_24">Centro de Bioactivos Químicos</string>
    <string name="img_25">Laboratorio del Centro de Bioactivos Químicos</string>
    <string name="img_26">Centro de Investigaciones Informáticas</string>
    <string name="img_27">Laboratorio del Centro de Investigaciones Informáticas</string>
    <string name="img_28">Facultad de Construcciones</string>
    <string name="img_29">Facultad de Construcciones</string>
    <string name="img_3">Vista del Edificio del Rectorado</string>
    <string name="img_30">Facultad de Construcciones</string>
    <string name="img_31">Colección Coronado</string>
    <string name="img_32">Colección Coronado</string>
    <string name="img_33">Colección Coronado</string>
    <string name="img_34">Colección Coronado</string>
    <string name="img_35">Facultad de Ciencias Económicas</string>
    <string name="img_36">Facultad de Ciencias Económicas</string>
    <string name="img_37">Facultad de Ciencias Económicas</string>
    <string name="img_38">Entrada a la Facultad de Ingeniería Eléctrica</string>
    <string name="img_39">Laboratorio de Electrónica de la Facultad de Ingeniería Eléctrica</string>
    <string name="img_4">Policlínico universitario</string>
    <string name="img_40">Laboratorio de Electrónica de la Facultad de Ingeniería Eléctrica</string>
    <string name="img_41">Grupo de automatización, robótica y percepción de la Facultad de Ingeniería Eléctrica</string>
    <string name="img_42">Grupo de automatización, robótica y percepción de la Facultad de Ingeniería Eléctrica</string>
    <string name="img_43">Laboratorio de Electrónica Analógica de la Facultad de Ingeniería Eléctrica</string>
    <string name="img_44">Casa del Estudiante</string>
    <string name="img_45">Casa del Estudiante</string>
    <string name="img_46">Casa del Estudiante</string>
    <string name="img_47">Caminata por la Ruta del Che</string>
    <string name="img_48">Caminata por la Ruta del Che</string>
    <string name="img_49">Caminata por la Ruta del Che</string>
    <string name="img_5">Dirección de Internacionalización</string>
    <string name="img_50">Facultad de Ciencias Solicales</string>
    <string name="img_51">Centro de Estudios Comunitarios</string>
    <string name="img_52">Edificio Facultad de Humanidades</string>
    <string name="img_53">Edificio Facultad de Humanidades</string>
    <string name="img_54">Centro de Idiomas</string>
    <string name="img_55">Facultad de Humanidades</string>
    <string name="img_56">Facultad de Ciencias Solicales</string>
    <string name="img_57">Facultad de Ciencias Solicales</string>
    <string name="img_58">Facultad de Ciencias Solicales</string>
    <string name="img_59">Centro de Estudios Jardín Botánico</string>
    <string name="img_6">Salón de reuniones XXXV Aniversario</string>
    <string name="img_60">Centro de Estudios Jardín Botánico</string>
    <string name="img_61">Centro de Estudios Jardín Botánico</string>
    <string name="img_62">Centro de Estudios Jardín Botánico</string>
    <string name="img_63">Facultad de Química Farmacia</string>
    <string name="title_activity_cbq">Centro de Bioactivos Químicos (CBQ)</string>
    <string name="title_activity_cec">Centro de Estudios Comunitarios (CEC)</string>
    <string name="title_activity_cecfd">Centro de Estudio de Cultura Física y Deporte (CECFD)</string>
    <string name="title_activity_ced">Centro de Estudio de Dirección Empresarial (CEDE)</string>
    <string name="title_activity_cee">Centro de Estudio de Electroenergética (CEE)</string>
    <string name="title_activity_ceed">Centro de Estudio de Educación (CEED)</string>
    <string name="title_activity_cei">Centro de Investigaciones Informáticas (CII)</string>
    <string name="title_activity_cejb">Centro de Estudio del Jardín Botánico (CEJB)</string>
    <string name="title_activity_cemni">El Centro de Estudios de Métodos Computacionales y Numéricos en la Ingeniería (CIMNE)</string>
    <string name="title_activity_ceqa">Centro de Estudio de Química Aplicada (CEQA)</string>
    <string name="title_activity_ceta">Centro de Estudio Energéticos y Tecnologías Ambientales (CEETA)</string>
    <string name="title_activity_ciap">Centro de Investigaciones Agropecuaria (CIAP)</string>
    <string name="title_activity_cidem">El Centro de Investigación y desarrollo de las Estructuras y los Materiales (CIDEM)</string>
    <string name="title_activity_cis">Centro de Investigaciones de Soldadura (CIS)</string>
    <string name="title_activity_fc">Facultad de Construcciones (FC)</string>
    <string name="title_activity_fca">Facultad de Ciencias Agropecuarias (FCA)</string>
    <string name="title_activity_fce">Facultad de Ciencias Económicas (FCE)</string>
    <string name="title_activity_fcf">Facultad de Cultura Física (FCF)</string>
    <string name="title_activity_fcf_menu">Fac. Cultura Física (FCF)</string>
    <string name="title_activity_fcs">Facultad de Ciencias Sociales (FSC)</string>
    <string name="title_activity_fei">Facultad de Educación Infantil (FEI)</string>
    <string name="title_activity_fem">Facultad de Educación Media (FEM)</string>
    <string name="title_activity_fh">Facultad de Humanidades (FH)</string>
    <string name="title_activity_fie">Facultad de Ingeniería Eléctrica (FIE)</string>
    <string name="title_activity_fimi">Facultad de Ingeniería Mecánica e Industrial (FIMI)</string>
    <string name="title_activity_fmfc">Facultad de Matemática Física Computación (FMFC)</string>
    <string name="title_activity_fqf">Facultad de Química Farmacia (FQF)</string>
    <string name="title_activity_ibp">Instituto de Biotecnología de las Plantas (IBP)</string>
    <string name="title_dialog_biblioteca">Biblioteca</string>
    <string name="title_dialog_casafeu">Casa estudiantil de la FEU</string>
    <string name="title_dialog_comedor">Comedor Central</string>
    <string name="title_dialog_rectorado">Rectorado</string>
    <string name="title_dialog_rel_int">Dirección de Internacionalización</string>
    <string name="title_dialog_salahist">Sala de Historia</string>
    <string name="title_dialog_teatro_univ">Teatro universitario</string>
    <string name="title_mostrar">Mostrar imágenes</string>
    <string name="title_mostrar_mapa">Mostrar mapa</string>
</resources>