<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/app_menu_title">
            <menu>
                <item android:icon="@drawable/ic_panorama_black_24dp" android:id="@id/nav_visita" android:title="@string/app_menu_subtitle_menu" />
            </menu>
        </item>
    </group>
    <item android:title="@string/app_facultades">
        <menu>
            <item android:id="@+id/nav_deporte" android:title="@string/title_activity_fcf_menu" />
        </menu>
    </item>
    <item android:title="@string/app_galeria">
        <menu>
            <item android:icon="@drawable/ic_photo_library_black_24dp" android:id="@id/nav_galeria" android:title="@string/title_mostrar" />
        </menu>
    </item>
    <item android:title="@string/app_mapa">
        <menu>
            <item android:icon="@drawable/ic_map_black_24dp" android:id="@id/nav_mapa" android:title="@string/title_mostrar_mapa" />
        </menu>
    </item>
</menu>