<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@android:style/TextAppearance.Widget.PopupMenu.Large" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/lytLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="26.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="@color/colorPrimary" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_credit_title" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/dialog_credit_realizadopor" />
    <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/dialog_credit_departamento" />
    <TextView android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="UCLV-2019" />
</LinearLayout>