<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@android:style/TextAppearance.Widget.PopupMenu.Large" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/lytLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="26.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="@color/colorPrimary" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_idioma_title" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:weightSum="2.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_idioma_espannol" />
            <ImageButton android:id="@+id/espannol" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_idioma_espannol" android:onClick="onEspannol" app:srcCompat="@drawable/es" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_idioma_ingles" />
            <ImageButton android:id="@+id/ingles" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_idioma_ingles" android:onClick="onIngles" app:srcCompat="@drawable/en" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>